--- a/styles/style.css
+++ b/styles/style.css
@@ -69,7 +69,8 @@ body {
 }
 
 .log-sign-list {
-  text-align: end;
+  text-align: center;
+  padding: 5px;
   color: #777777;
   margin: 10px 0 0;
   margin-left: 120px;
@@ -90,29 +91,35 @@ body {
   text-decoration: underline;
 }
 
+#ham-btn {
+  position: fixed;
+  top: 2%;
+  left: 95%;
+  display: none;
+}
+#ham-btn:hover {
+  color: wheat;
+  background-color: lightslategrey;
+}
 /* main Body Stylings */
 
 #main {
-  margin: 10px 180px;
+  width: 100%;
   margin-top: 80px;
-  display: grid;
-  grid-template-columns: 65% 35%;
-  grid-template-areas: "quiz categories";
   margin-bottom: 50px;
-  grid-gap: 90px;
 }
 .main-quiz-container {
-  grid-area: quiz;
+  width: 40%;
+  margin-left: 80px;
+  display: inline-block;
 }
 
 .main-quiz-container h1 {
   color: #333333;
   margin: 20px 0px 10px;
-  text-align: center;
+  text-align: end;
   font-weight: normal;
   font-size: 2.5em;
-  grid-column-start: 1;
-  grid-column-end: 3;
   margin-bottom: 30px;
 }
 
@@ -121,7 +128,7 @@ body {
   grid-template-columns: auto auto;
   grid-template-rows: auto auto auto auto auto auto;
   justify-content: space-between;
-  grid-gap: 25px;
+  grid-gap: 30px;
 }
 .quiz-container {
   width: 350px;
@@ -138,7 +145,7 @@ body {
   position: relative;
 }
 .image-container > img {
-  width: 350px;
+  width: inherit;
   height: 250px;
   background-size: cover;
 }
@@ -302,8 +309,10 @@ h3 {
 /* Aside Stylings */
 
 .aside {
-  grid-area: categories;
+  float: right;
+  width: 35%;
   margin-top: 20px;
+  display: inline-block;
 }
 
 /* Table-Top-Aside */
@@ -345,7 +354,7 @@ tr {
 }
 
 .quiz-categories-table {
-  width: 300px;
+  width: inherit;
   height: auto;
   padding: 5px;
   background-color: #fff;
@@ -405,6 +414,7 @@ tr {
 
 .quiz-tile {
   margin-top: 8px;
+  width: inherit;
   display: grid;
   grid-template-columns: repeat(2, 49%);
   grid-template-areas: "image title";
@@ -415,18 +425,18 @@ tr {
 }
 
 .quiz-image {
-  width: 150px;
+  width: inherit;
   grid-area: image;
 }
 
 .quiz-tile > img {
   grid-area: image;
-  width: 149px;
+  width: inherit;
   height: 100px;
 }
 
 .quiz-tile > h3 {
-  width: 150px;
+  width: inherit;
   grid-area: title;
   font-size: 0.9em;
   padding: 5px;
@@ -535,4 +545,512 @@ tr {
 
 .create-hover-list .create-list li:hover {
   background-color: rgb(206, 205, 202);
+}
+
+/* Media Queries */
+
+@media only screen and (max-width: 1300px) {
+  .head-list > li > img {
+    margin-left: 10px;
+  }
+
+  .aside {
+    margin-left: 60px;
+  }
+
+  .category-hover-list {
+    left: 20%;
+  }
+  .create-hover-list {
+    left: 30%;
+  }
+}
+
+@media only screen and (max-width: 1250px) {
+  .main-quiz-container {
+    margin-left: 10px;
+  }
+}
+
+@media screen and (max-width: 1150px) {
+  .hor-list li {
+    margin-left: 20px;
+  }
+  .nav-list {
+    margin-left: 40px;
+  }
+  .log-sign-list {
+    margin-left: 40px;
+  }
+
+  .main-quiz-container h1 {
+    font-size: 2em;
+  }
+  .quiz-container {
+    width: 300px;
+    height: 340px;
+  }
+
+  .about-quiz {
+    margin: auto;
+  }
+  .about-quiz > p {
+    font-size: 0.9em;
+  }
+  .about-quiz > h3 {
+    font-size: 1em;
+  }
+
+  .table-top {
+    width: 300px;
+    height: 300px;
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  .hor-list {
+    margin-left: 0px;
+    margin-right: 0px;
+  }
+
+  .nav-list {
+    margin-left: 0;
+    margin-right: 0;
+  }
+  .head-list {
+    margin-left: 10px;
+  }
+
+  .head-list > li > img {
+    width: 90px;
+  }
+
+  .aside {
+    margin-top: 50px;
+    width: 30%;
+  }
+
+  .table-top {
+    width: 250px;
+    height: 250px;
+  }
+
+  .table-top tr th {
+    font-size: 1.2em;
+  }
+
+  .quiz-categories {
+    width: 250px;
+  }
+
+  .quiz-categories > h3 {
+    font-size: 1.2em;
+  }
+
+  .quiz-row a {
+    font-size: 0.8em;
+  }
+
+  .top-quiz {
+    width: 250px;
+  }
+
+  .quiz-tile > h3 {
+    font-size: 0.5em;
+    padding: 2px;
+  }
+  .quiz-tile > img {
+    width: 120px;
+  }
+
+  .create-quiz-btn {
+    width: 250px;
+    font-size: 1em;
+    border-radius: 0.4em;
+  }
+
+  .category-hover-list {
+    left: 15%;
+  }
+}
+
+@media screen and (max-width: 920px) {
+  .head-list li {
+    display: block;
+  }
+
+  .nav-list {
+    display: none;
+  }
+  .log-sign-list {
+    align-self: center;
+    display: none;
+  }
+  #ham-btn {
+    height: 25px;
+    width: 30px;
+    display: initial;
+    color: #333;
+    background-color: #888888;
+  }
+
+  .quiz-container {
+    width: 350px;
+  }
+
+  .aside {
+    float: unset;
+    vertical-align: bottom;
+    margin-top: 50px;
+    display: inline-block;
+    text-align: center;
+    align-content: center;
+    margin-left: 33%;
+  }
+  .table-top {
+    box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.1);
+    height: 300px;
+    width: 300px;
+    background-color: #fff;
+    cursor: pointer;
+  }
+
+  .table-top tr th {
+    padding: 5px;
+    font-size: 1.5em;
+    font-weight: 500;
+  }
+
+  table {
+    border-collapse: collapse;
+  }
+  tr {
+    border-bottom: solid;
+    border-width: 1px 0;
+    border-color: rgb(218, 205, 205);
+  }
+
+  #all {
+    font-weight: 600;
+    background-color: whitesmoke;
+  }
+
+  .quiz-categories {
+    width: 300px;
+    margin-top: 40px;
+  }
+
+  .quiz-categories-table {
+    width: inherit;
+    height: auto;
+    padding: 5px;
+    background-color: #fff;
+    box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.1);
+  }
+  .quiz-categories > h3 {
+    text-align: center;
+    font-size: 1.5em;
+    font-weight: 450;
+    margin-top: 20px;
+    margin-bottom: 5px;
+  }
+
+  .quiz-row {
+    padding: 0px;
+    margin: 0px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    border-bottom: 1px solid rgb(218, 205, 205);
+  }
+  .quiz-row:last-child {
+    border-bottom: none;
+  }
+  .quiz-row a {
+    padding: 5px;
+    padding-right: 7px;
+    margin: 2px 0px 4px;
+    border-right: 1px solid rgb(218, 205, 205);
+    text-decoration: none;
+    color: black;
+  }
+  .quiz-row .end-category {
+    border-right: none;
+  }
+
+  .quiz-row #women {
+    font-weight: 600;
+  }
+  .quiz-row a:hover {
+    background-color: rgb(229, 226, 226);
+  }
+
+  .top-quiz {
+    width: 300px;
+    margin-top: 40px;
+  }
+  .top-quiz > h3 {
+    text-align: center;
+    font-size: 1.5em;
+    font-weight: 450;
+    margin-top: 20px;
+    margin-bottom: 5px;
+  }
+
+  .quiz-tile {
+    margin-top: 8px;
+    width: inherit;
+    display: grid;
+    grid-template-columns: repeat(2, 49%);
+    grid-template-areas: "image title";
+    background-color: whitesmoke;
+    box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+  }
+
+  .quiz-image {
+    width: inherit;
+    grid-area: image;
+  }
+
+  .quiz-tile > img {
+    grid-area: image;
+    width: inherit;
+    height: 100px;
+  }
+
+  .quiz-tile > h3 {
+    width: inherit;
+    grid-area: title;
+    font-size: 0.9em;
+    padding: 5px;
+    font-weight: 500;
+  }
+
+  .create-quiz-btn {
+    width: 300px;
+    background-color: #30c553;
+    color: aliceblue;
+    font-weight: bold;
+    font-size: 1.5em;
+    border: none;
+    padding: 8px;
+    margin: 40px 0px;
+    border-radius: 0.8rem;
+  }
+
+  .create-quiz-btn:hover {
+    background-color: #19692c;
+  }
+
+  .category-hover-list {
+    position: fixed;
+    left: 30%;
+    width: 360px;
+    z-index: 150;
+    top: 8%;
+    display: none;
+    grid-template-columns: repeat(2, 180px);
+    grid-template-rows: auto auto;
+    background-color: aliceblue;
+  }
+
+  .category-hover {
+    padding: 10px;
+    background-color: aliceblue;
+  }
+
+  .quiz-hover {
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 2;
+  }
+
+  .category-hover > p {
+    font-weight: 600;
+    font-size: 1.2em;
+    padding-left: 30px;
+  }
+
+  .story-hover {
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 2;
+  }
+  .popular-hover {
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 2;
+    grid-row-end: 3;
+  }
+  .category-hover-list li {
+    cursor: pointer;
+    font-size: 1em;
+  }
+  .category-hover-list li:hover {
+    background-color: rgb(206, 205, 202);
+  }
+
+  .main-quiz-container h1 {
+    color: #333333;
+    margin: 20px 0px 10px;
+    text-align: end;
+    font-weight: normal;
+    font-size: 2.5em;
+    margin-bottom: 30px;
+  }
+  .quiz-container {
+    width: 350px;
+    height: 390px;
+    overflow: hidden;
+    display: inline-block;
+    cursor: pointer;
+    background-color: azure;
+    box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.1);
+  }
+
+  .about-quiz {
+    margin: 0 30px;
+  }
+  .about-quiz > p {
+    font-size: 0.9em;
+  }
+  .about-quiz > h3 {
+    font-size: 1.2em;
+  }
+
+  .main-quiz-container {
+    width: 70%;
+    margin-left: 80px;
+  }
+  .main-quiz-container h1 {
+    color: #333333;
+    margin: 20px 0px 10px;
+    text-align: end;
+    font-weight: normal;
+    font-size: 2.5em;
+    margin-bottom: 30px;
+  }
+
+  .category-hover-list {
+    top: 11%;
+  }
+  .create-hover-list {
+    top: 15%;
+    left: 42%;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  #main {
+    margin-left: 10px;
+  }
+  .main-quiz-container {
+    margin-left: 10px;
+  }
+}
+
+@media screen and (max-width: 720px) {
+  .main-quiz-container h1 {
+    font-size: 2em;
+  }
+  .quiz-container {
+    width: 300px;
+    height: 340px;
+  }
+
+  .about-quiz {
+    margin: auto;
+  }
+  .about-quiz > p {
+    font-size: 0.9em;
+  }
+  .about-quiz > h3 {
+    font-size: 1em;
+  }
+}
+
+@media screen and (max-width: 630px) {
+  #main {
+    width: 100%;
+  }
+  .main-quiz-container {
+    width: 100%;
+  }
+  .quiz-container {
+    width: 100%;
+    height: 100%;
+  }
+
+  .main-quiz-container h1 {
+    text-align: center;
+  }
+
+  .main-quiz-container {
+    grid-gap: 5px;
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .container-grid-quiz {
+    display: block;
+  }
+
+  .quiz-container {
+    width: 350px;
+    height: 390px;
+    margin: 10px 0;
+    margin-left: 80px;
+  }
+
+  .aside {
+    margin-left: 100px;
+  }
+
+  #ham-btn {
+    left: 90%;
+  }
+
+  .category-hover-list {
+    left: 15%;
+  }
+  .create-hover-list {
+    left: 30%;
+  }
+}
+
+@media screen and (max-width: 460px) {
+  .main-quiz-container {
+    margin-left: 0px;
+  }
+  .quiz-container {
+    margin-left: 40px;
+  }
+  .aside {
+    margin-left: 50px;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .quiz-container {
+    margin-left: 5px;
+  }
+  .aside {
+    margin-left: 5px;
+  }
+
+  .category-hover-list {
+    left: 5%;
+    font-size: 1em;
+  }
+  .create-hover-list {
+    left: 20%;
+    font-size: 1em;
+  }
 }
